@@ -18,6 +18,7 @@
 			<label index="groupProfile_image">Image</label>
 			<label index="groupProfile_information">Information</label>
 			<label index="groupProfile_profileActions">Profile Actions</label>
+			<label index="groupProfile_groupInformation">Group Information</label>
 			<label index="privacy">Privacy</label>
 			<label index="editGroup">Edit group</label>
 			<label index="newGroup">New group</label>
