@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the user profile's personal information widget</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="information_groupInformation">Group Information</label>
+			<label index="information_title">Title</label>
+			<label index="information_description">Description</label>
+			<label index="information_image">Image</label>
+			<label index="information_admin">Admins</label>
+		</languageKey>
+	</data>
+</T3locallang>
