@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the user profile's personal information widget</title>
+</head>
+<body>
+
+<!-- ###GROUP_INFORMATION### begin -->
+
+<h4>###LLL:information_groupInformation###</h4>
+
+<table border="0" cellpadding="0" cellspacing="0">
+	<tbody>
+		<tr>
+			<td class="label">###LLL:information_title###:</td>
+			<td class="data">###GROUP.title###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information_description###:</td>
+			<td class="data">###GROUP.description###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information_image###:</td>
+			<td class="data">###GROUP.image###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information_admin###:</td>
+			<td class="data">###GROUP.admin###</td>
+		</tr>
+	</tbody>
+</table>
+
+
+<!-- ###GROUP_INFORMATION### end -->
+
+</body>
+</html>
