@@ -50,6 +50,9 @@ plugin.tx_community {
 				profileActions {
 					templateFile = EXT:community/resources/templates/groupprofile/profileactionswidget.htm
 				}
+				groupInformation {
+					templateFile = EXT:community/resources/templates/groupprofile/groupinformationwidget.htm
+				}
 			}
 		}
 
