@@ -1,3 +1,7 @@
+2008-09-30 Frank Naegler  <typo3@naegler.net>
+
+	* adding GroupInformationWidget
+
 2008-09-29 Ingo Renner  <ingo@typo3.org>
 
 	* !!! changed the way the configuration for community applications is build, their names now start with lower case letters like anything else, too
